--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-query": "^3.39.3",
     "recharts": "^2.12.7",
     "swr": "^2.2.5"
   },
