--- a/web/package.json
+++ b/web/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.3",
     "cookies-next": "^4.1.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-query": "^3.39.3",
     "recharts": "^2.12.7",
     "swr": "^2.2.5"
