--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,24 +1,20 @@
 name: Docker Image CI
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Use Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '18.17.0'
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "18.17.0"
 
-    - name: Build the Docker image
-      run: cd deploy && docker compose build
+      - name: Build the Docker image
+        run: cd deploy && docker compose build
