--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-query": "^3.39.3",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "swr": "^2.2.5"
   },
