--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 alembic==1.13.1
 amqp==5.2.0
 annotated-types==0.6.0
-anyio==4.3.0
+anyio==3.5.0
 APScheduler==3.10.4
 bcrypt==4.1.2
 beautifulsoup4==4.12.3
@@ -42,7 +42,7 @@ mypy-extensions==1.0.0
 nodeenv==1.8.0
 numpy==1.26.4
 oauthlib==3.2.2
-packaging==24.0
+packaging==23.2
 pandas==2.2.2
 passlib==1.7.4
 pathspec==0.12.1
@@ -65,7 +65,7 @@ pypdf==4.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-jose==3.3.0
-python-multipart==0.0.9
+python-multipart==0.0.7
 pytz==2024.1
 PyYAML==6.0.1
 requests==2.31.0
@@ -90,3 +90,6 @@ wcwidth==0.2.13
 webencodings==0.5.1
 websockets==12.0
 yfinance==0.2.40
+requests-cache==1.2.0
+requests-ratelimiter==0.6.0
+pyrate-limiter==2.10.0
